--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.3",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
