--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "mongoose": "^8.15.1",
@@ -22,8 +24,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4"
+    "jsdom": "^26.1.0",
+    "tailwindcss": "^4",
+    "vitest": "^3.2.2"
   }
 }
